[gd_scene load_steps=14 format=3 uid="uid://drakbuggxc807"]

[ext_resource type="Script" uid="uid://d3f5wy4c6t7e" path="res://Scripts/Scenes/mainScene.gd" id="1_hpc76"]
[ext_resource type="PackedScene" uid="uid://bvkcos12mjaxr" path="res://Scenes/boardManager.tscn" id="2_q68mp"]
[ext_resource type="PackedScene" uid="uid://cgbeiher77acw" path="res://objects/mouse.tscn" id="2_tr2i4"]
[ext_resource type="PackedScene" uid="uid://ysw1vyd7dj33" path="res://Scenes/deck.tscn" id="3_nhkr4"]
[ext_resource type="PackedScene" uid="uid://cobtvt8orra4u" path="res://Scenes/handManager.tscn" id="5_f140w"]
[ext_resource type="Shader" uid="uid://bebd7eu5owxt0" path="res://shaders/rainbow_border.gdshader" id="5_y4jh7"]
[ext_resource type="PackedScene" uid="uid://crwftl3w4v8qo" path="res://Scenes/battleManager.tscn" id="6_f140w"]
[ext_resource type="PackedScene" uid="uid://k4v4s2gtpl8t" path="res://Scenes/deckDiscarded.tscn" id="9_0iob3"]
[ext_resource type="PackedScene" uid="uid://b40yamh1qyeup" path="res://objects/SFXmanager.tscn" id="9_4b75m"]
[ext_resource type="PackedScene" uid="uid://d2cuqmk8uafxv" path="res://Scenes/battleSimulator.tscn" id="10_4b75m"]
[ext_resource type="PackedScene" uid="uid://cvhipaaqpctj6" path="res://Scenes/battleANIMATOR.tscn" id="11_8ju71"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4b75m"]
shader = ExtResource("5_y4jh7")
shader_parameter/brightness = 0.865
shader_parameter/contrast = 0.655
shader_parameter/alpha_mult = 4.98
shader_parameter/border_size = 0.505
shader_parameter/speed = 0.03
shader_parameter/is_active = true

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qxria"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hpc76")

[node name="BoardManager" parent="." instance=ExtResource("2_q68mp")]
position = Vector2(-255, -450)

[node name="handManager" parent="." instance=ExtResource("5_f140w")]
position = Vector2(0, 1231)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(439, 331)
zoom = Vector2(0.445, 0.445)

[node name="Mouse" parent="." instance=ExtResource("2_tr2i4")]
position = Vector2(-264, 452)

[node name="Deck" parent="." instance=ExtResource("3_nhkr4")]
position = Vector2(2397, 0)

[node name="BattleManager" parent="." instance=ExtResource("6_f140w")]
position = Vector2(-1084, -450)
scale = Vector2(0.89, 0.89)

[node name="Button" type="Button" parent="."]
offset_left = -1084.0
offset_top = 788.0
offset_right = -583.0
offset_bottom = 1030.0
theme_override_font_sizes/font_size = 171
text = "FIGHT"

[node name="TextureRect" type="NinePatchRect" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_4b75m")
offset_left = -364.0
offset_top = -568.0
offset_right = 1214.0
offset_bottom = 1016.0
texture = SubResource("CompressedTexture2D_qxria")
draw_center = false

[node name="DeckDiscarded" parent="." instance=ExtResource("9_0iob3")]
position = Vector2(-2822, 233)

[node name="sfxManager" parent="." instance=ExtResource("9_4b75m")]
position = Vector2(364, 233)

[node name="BattleSimulator" parent="." instance=ExtResource("10_4b75m")]

[node name="BattleAnimator" parent="." instance=ExtResource("11_8ju71")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
